Bug 115786 - Unable to open styles window when sidebar is undocked
Summary: Unable to open styles window when sidebar is undocked
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.0.1.1 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
: 117571 117681 (view as bug list)
Depends on:
Blocks: Sidebar-Styles
  Show dependency treegraph
 
Reported: 2018-02-16 17:35 UTC by Alex ARNAUD
Modified: 2018-10-14 14:40 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex ARNAUD 2018-02-16 17:35:19 UTC
Description:
The styles window when it is undocked doesn't open after the first time.

Steps to Reproduce:
1. Open LibreOffice Writer
2. Press F11 to open the styles from the sidebar
3. Undock the sidebar
4. Close the undocked window
5. Press F11 to open style

Actual Results:  
The window is opened and closed immediately

Expected Results:
The windows should be opened.


Reproducible: Always


User Profile Reset: Yes



Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Jean-Baptiste Faure 2018-02-16 20:44:39 UTC
Thank you very much for this bug report.

Not reproducible with LO 5.3.7 vanilla (from LibreOffice website).
Reproducible with LO 6.0.1 from Ubuntu PPA. Same behavior if I use the GTK2 or the GTK3 VCL plugin.

Set status to NEW.

Best regards. JBF
Comment 2 Xisco Faulí 2018-02-19 11:35:42 UTC
Regression introduced by:

author	Katarina Behrens <Katarina.Behrens@cib.de>	2017-10-18 12:50:59 +0200
committer	Katarina Behrens <Katarina.Behrens@cib.de>	2017-10-21 15:02:50 +0200
commit 23467fa5cfa2feffbeba2177c0d393f8ebe1a0a3 (patch)
tree 71e3c86a862291530699fce94dcd90a61ab421c1
parent 0c46b3a9a384d5b70a708c3e9459a790dd815c63 (diff)
tdf#67770: Read/writer LastActiveDeck bits

Bisected with: bibisect-linux64-6.0

Adding Cc: to Katarina Behrens
Comment 3 Samuel Thibault 2018-02-26 16:04:00 UTC
Confirming the issue here as well.

Another point perhaps worth mentioning is the following scenario:

- uncheck View->Sidebar
- press F11 (or equivalently View->Styles), the sidebar shows up with the style sidebar open
- uncheck View->Sidebar (again)
- press F11 (or equivalently View->Styles), the sidebar shows up, but the style sidebar doesn't open

This does not look coherent. To be really useful for accessibility, F11 should just always get the caret into the style panel, be it in the sidebar or a floating window. If the style panel is already visible, then the caret should just be moved there, instead of closing it. Blind users wouldn't know when it is open or not, so ATM they would have to press F11 once or twice to get to the style panel. If sighted users really want a shortcut to open/close the sidebar, this can be a separate shortcut. Tangling it with the appearance of the style panel seems like mostly bringing issues, as this very bug shows.
Comment 4 Bert Cuzeau 2018-03-03 17:50:40 UTC
I confirm the problem on Windows 64bits

The un-docked Styles formatting window becomes impossible to display.
F11 or View-Styles makes it appear briefly then it disappears.
Closing then re-opening does not solve.
Same problem with Writer and Calc (did not try other modules)

(every LibreOffice version is worse than the previous.
None of the problems that appeared were fixed, only new problems are added)

Other Styles window problem (appeared long ago) :

The Styles window does not stay in the Styles List mode (which is the only mode I use). I have to switch every time I open a document. 

I try newer LO versions hoping they will solve some of the regressions that pile up, but this just does not happen :-(
I try to help by reporting, but is it useful ?
Comment 5 V Stuart Foote 2018-03-03 20:12:39 UTC
Hmm, behavior when docked vs. undocked differs.

When docked positioned with a deck already active, a second click on the Tab bar buttons (or F11 for Styles) collapses the deck--leaving just the Sidebar's tab bar. A second click (buttons or shortcut) will expand the deck. 

Sidebar will not close unless the button action from View -> Sidebar menu, or the Sidebar's Settings droplist "Close sidebar" button action is applied.

But currently when undocked, a second click (by button or shortcut)--rather than collapsing the deck to show just the Tab bar floating--closes the Sidebar and cursor focus drops to the LibreOffice application frame. 

That is the issue here, not the assignment of the shortcut or button actions. 

The sidebar in undocked detached state should not close when a deck is being selected twice. Seems the action for collapsing the Deck to show just the Tab bar when docked--is being mishandled when undocked.

Meanwhile it is simple to recover--F10 (to regain focus to LibreOffice menu) -> View -> Sidebar will reopen the detached Sidebar at the last active deck.
Comment 6 Xisco Faulí 2018-03-27 12:00:34 UTC
Bubli committed this https://cgit.freedesktop.org/libreoffice/core/commit/?id=f7de9714b00dd618544cf561d5ee45354623b947 but the notification didn't work....
Comment 7 Katarina Behrens (Inactive) 2018-03-27 13:46:31 UTC
Unassigning this and intentionally leaving the bug open. I have hard time understanding the rest of the bugfix creep tbh.
Comment 8 Wolfgang Jäger 2018-04-18 12:11:24 UTC
V6.0.3.2 Win 10 x64:
I cannot reopen the 'Styles' window at all once it was closed. 
Pressing F11 or calling 'Manage Styles' from the 'Styles main menu item, I get a short flash of it, but the window immediately closes again.
Comment 9 Wolfgang Jäger 2018-04-18 12:13:11 UTC
(In reply to Wolfgang Jäger from comment #8)
> V6.0.3.2 Win 10 x64:
> ...

Sorry. The "x64" applies to the LibO version.
Comment 10 Alex ARNAUD 2018-04-18 13:35:50 UTC
Is it OK to raise the importance of this bug?

Best regards,
Alex.
Comment 11 V Stuart Foote 2018-05-13 15:15:26 UTC
*** Bug 117571 has been marked as a duplicate of this bug. ***
Comment 12 V Stuart Foote 2018-05-18 15:49:32 UTC
*** Bug 117681 has been marked as a duplicate of this bug. ***
Comment 13 Jim Raykowski 2018-05-19 07:03:21 UTC
I do not repro the original bug report using:

Version 6.1.0.0.alpha1+ (x64)
Build ID: 7237db44dfac914e5b6003f418267d3df1e7f162
CPU threads: 4; OS: Windows 10.0; UI render: default;
TinderBox: Win-x86_64@42; Branchmaster; Time: 2018-05-05_12:19:17
Locale: en-US (en-US); Calc: group

Or

Version 6.1.0.0.alpha1+
Linux 4.13
Comment 14 V Stuart Foote 2018-05-19 14:40:54 UTC
(In reply to Jim Raykowski from comment #13)
> I do not repro the original bug report using:
> 
Nor do I, Bubli's patch took care of that and this should probably be closed. 

Remaining work of sorting out "coherence" (comment 3) of the F11 focus & open/close behaviors (both docked and undocked) as with bug 101915 and ref.

=-ref-=
https://gerrit.libreoffice.org/#/c/52612/
Comment 15 Alex ARNAUD 2018-05-22 11:56:05 UTC
Hello all,

With the latest daily build I can confirm that the bug is correctly fixed, thanks :)!

Best regards,
Alex.
Comment 16 Gerry Miller 2018-06-23 21:52:44 UTC
Bug still there in version 6.0.5.
Comment 17 ThomP 2018-10-14 05:05:50 UTC
Bug is still here in 6.0.6.2 (x64). Win 10 home.

Method to reproduce:
Open LibreOffice
Open sidebar deck
Undock sidebar
close resulting floating window
Press F11
     Result: floating window (which is, apparently, the Styles dialog) appears for less than a second and then disappears.
Selecting View -> Sidebar produces the same result.

Method to restore:
Select View -> Gallery
     Result: floating sidebar deck reappears with focus in Gallery
Redock sidebar
Press F11
     Result: Styles portion of sidebar deck reappears as before

Lesson: Don't try to over-customize this software ... you'll never get any work done.
Comment 18 V Stuart Foote 2018-10-14 14:40:51 UTC
(In reply to ThomP from comment #17)
> Bug is still here in 6.0.6.2 (x64). Win 10 home.

Correct, the target of bubli's fix was 6.1.0, and was not back ported to a 6.0 branch [1]. The secondary issue was opened as bug 101915 and then fixed for master/6.2.0 [2] with back port against 6.1.0.1 [3].

Verified Fixed was done in 6.1.0.1

=-ref-=
https://gerrit.libreoffice.org/#/c/51866/
https://gerrit.libreoffice.org/#/c/52612/
https://gerrit.libreoffice.org/#/c/55305/