tdf#115786: Fix reopening undocked sidebar

while trying hard to keep tdf#88241 fixed. Had to introduce yet
another bool variable as now that previously active sidebar deck
is remembered (= it is visible when floating window opens) it's
impossible to tell whether sidebar was already opened or not

Change-Id: If2c9edfa2f9beb400537b106d3094f256b0cc183